<package format="2">
  <name>lapackpp</name>
  <version>2.5.4</version>
  <description>

     LAPACK++ is a library for high performance linear algebra computations.
     This version includes support for solving linear systems using LU, Cholesky,
     QR matrix factorizations, for real and complex matrices.
     
     This package is a simple wrapper for downloading the Lapack++ library
     and exporting it to the ROS system so it can be referenced.

  </description>
  <author>Christian Stimming</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>LGPL v2</license>
  <url>http://lapackpp.sourceforge.net</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
